--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^4.2.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
