--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "portfolio-2",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -26,7 +26,6 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "^3.0.1",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12",
     "typewriter-effect": "^2.21.0",
@@ -37,12 +36,10 @@
     "@babel/preset-react": "^7.24.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "react-scripts": "^3.0.1"
   },
   "browserslist": {
     "production": [
